[gd_scene load_steps=16 format=3 uid="uid://bhrgdgf5nja5j"]

[ext_resource type="Script" uid="uid://gla0cja4mfrw" path="res://scripts/enemy/enemy.gd" id="1_pkqqt"]
[ext_resource type="Script" uid="uid://cx0xxqn8au6ks" path="res://scripts/common/health.gd" id="1_w3ipt"]
[ext_resource type="Texture2D" uid="uid://d0016wk0ra8qf" path="res://textures/generic_character-Sheet.png" id="2_cf8o5"]
[ext_resource type="Script" uid="uid://dd0ocu2dk0341" path="res://scripts/enemy/enemy_ai.gd" id="3_av2jj"]
[ext_resource type="Material" uid="uid://ji11nvc5hngp" path="res://materials/character_shadow.tres" id="3_ni2e0"]
[ext_resource type="Script" uid="uid://b3ey84j6drg0v" path="res://scripts/enemy/enemy_sprite.gd" id="4_alf50"]
[ext_resource type="Script" uid="uid://h2ankc57xp0k" path="res://scripts/enemy/enemy_movement.gd" id="5_5hfr3"]
[ext_resource type="Script" uid="uid://b1iyvhk6s6soj" path="res://scripts/enemy/enemy_sight.gd" id="6_pssps"]
[ext_resource type="Script" uid="uid://q786hxut4s3f" path="res://scripts/enemy/enemy_gun_holder.gd" id="7_qehvh"]
[ext_resource type="Script" uid="uid://b2dpd8c06nmlb" path="res://scripts/common/gun.gd" id="8_58ed5"]
[ext_resource type="Script" uid="uid://c4yuajoxxo5r4" path="res://scripts/enemy/enemy_hearing.gd" id="9_q30q4"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_cf8o5"]
radius = 0.7
height = 1.8

[sub_resource type="QuadMesh" id="QuadMesh_alf50"]
size = Vector2(1.5, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ni2e0"]
transparency = 1
depth_draw_mode = 2
shading_mode = 0
albedo_color = Color(0, 0, 0, 0.364706)
stencil_mode = 3
stencil_flags = 2

[sub_resource type="CylinderShape3D" id="CylinderShape3D_5hfr3"]
height = 6.0
radius = 12.0

[node name="Enemy" type="CharacterBody3D" node_paths=PackedStringArray("movement", "ai", "gun_holder", "navigation")]
collision_layer = 8
script = ExtResource("1_pkqqt")
movement = NodePath("Movement")
ai = NodePath("AI")
gun_holder = NodePath("gun_holder")
navigation = NodePath("NavigationAgent3D")

[node name="health" type="Node3D" parent="."]
script = ExtResource("1_w3ipt")
health = 5

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_cf8o5")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.64741564, 0, 0)
material_overlay = ExtResource("3_ni2e0")
offset = Vector2(0, 8)
modulate = Color(1, 0, 0, 1)
pixel_size = 0.12
billboard = 1
shaded = true
texture_filter = 0
texture = ExtResource("2_cf8o5")
hframes = 3
vframes = 3
script = ExtResource("4_alf50")

[node name="shadow" type="MeshInstance3D" parent="Sprite3D"]
transform = Transform3D(0.55, 0, 0, 0, 8.52372e-08, 1, 0, -0.65, 1.31134e-07, 0, 0.013, 0)
mesh = SubResource("QuadMesh_alf50")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_ni2e0")

[node name="AI" type="Node" parent="."]
script = ExtResource("3_av2jj")

[node name="Movement" type="Node" parent="."]
script = ExtResource("5_5hfr3")
movement_speed = 3.5

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="sight" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.32182, 0)
collision_layer = 0
collision_mask = 4
script = ExtResource("6_pssps")

[node name="CollisionShape3D" type="CollisionShape3D" parent="sight"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_5hfr3")

[node name="gun_holder" type="Node3D" parent="." node_paths=PackedStringArray("gun")]
script = ExtResource("7_qehvh")
gun = NodePath("Gun")

[node name="Gun" type="Node3D" parent="gun_holder"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.7)
script = ExtResource("8_58ed5")
base_spread = 10.0
bullet_count = 3
firing_cooldown = 2.5
bullet_speed = 10.0
burst_time = 0.5
burst_type = 2
target_type = 1
metadata/_custom_type_script = "uid://b2dpd8c06nmlb"

[node name="hearing" type="Node3D" parent="."]
script = ExtResource("9_q30q4")

[node name="dodge" type="Node3D" parent="."]

[connection signal="on_damaged" from="health" to="Sprite3D" method="on_damage"]
[connection signal="target_sighted" from="sight" to="AI" method="on_target_sighted"]
[connection signal="on_sound_heared" from="hearing" to="AI" method="on_sound_heared"]
